[package]
name = "void_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "void-runner"
path = "src/main.rs"

[dependencies]
wasmtime = "28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
